--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "firebase": "^5.0.4",
+    "vee-validate": "^2.1.0-beta.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
